@@ -1,5 +1,8 @@
 2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* channels/chan_misdn.c: various fixes from issue #5639
+	* channels/misdn/isdn_lib.c: various fixes from issue #5639
+
 	* apps/app_playback.c: upgrade to new arg/option API and implement priority jumping control
 
 	* apps/app_privacy.c: upgrade to new arg/option API and implement priority jumping control
